Fix some minor layout bugs
- z-index bug on welcome slideshow
- Remove default colour from link, already scoped to text styles in
  .copy class and only needed there by default. Resolves a number of
design consistency issues

--- a/frontend/assets/stylesheets/objects/_links.scss
+++ b/frontend/assets/stylesheets/objects/_links.scss
@@ -5,7 +5,6 @@
 a,
 .fake-link {
     overflow: hidden;
-    color: $c-link;
     cursor: pointer;
     text-decoration: none;
 
